--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ thiserror = "1.0.23"
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
 sha2 = "0.9.3"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
