--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-argh = "0.1.4"
 anyhow = "1.0.38"
 thiserror = "1.0.23"
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
 sha2 = "0.9.3"
 chrono = { version = "0.4.19", features = ["serde"] }
+clap = "2.33"
