--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ serde_json = "1.0.62"
 sha2 = "0.9.3"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = "2.33"
+tar = "0.4.32"
+flate2 = "1.0.20"
