--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,18 @@
 name = "umoci-rs"
 version = "0.1.0"
 authors = ["Benny Zlotnik <bzlotnik@protonmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.38"
-thiserror = "1.0.23"
-serde = { version = "1.0.123", features = ["derive"] }
-serde_json = "1.0.62"
-sha2 = "0.9.3"
+anyhow = "1.0.44"
+thiserror = "1.0.30"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.68"
+sha2 = "0.9.8"
 chrono = { version = "0.4.19", features = ["serde"] }
-clap = "2.33"
-tar = "0.4.32"
-flate2 = "1.0.20"
+clap = "2.33.3"
+tar = "0.4.37"
+flate2 = "1.0.22"
+oci-spec = "0.5.2"
