rename project and update readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "umoci-rs"
+name = "oci-extractor"
 version = "0.1.0"
 authors = ["Benny Zlotnik <bzlotnik@protonmail.com>"]
 edition = "2021"
