--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ clap = "3.0.0-beta.5"
 tar = "0.4.37"
 flate2 = "1.0.22"
 oci-spec = "0.5.2"
+reqwest = { version = "0.11.6", features = ["json"] }
+tokio = { version = "1.13.0", features = ["full"] }
